--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,5 +18,30 @@ img {
     box-shadow: 0 0 30px gray;
 }
 p {
-    padding: 10px;
+    padding: 0px;
+}
+main{
+    max-width: 840px;
+}
+aside{
+    width: 20rem;
+    margin: 1rem;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    padding: 1rem;
+    background-color: #eee;
+    color: #333;
+    text-align: center;
+}
+aside img{
+    width: 200px;
+    height: auto;
+}
+main img{
+    width: 150px;
+    height: auto;
+}
+footer{
+    margin-top: 15px;
+    border-top: 1px  solid #000;
+    text-align: center;
 }
