--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -10,7 +10,7 @@
 
     --heading-font: 'Oswald', serif;
     --paragraph-font: 'Poppins', serif;
-/*Buttons Color*/
+/*Navigation Buttons Color*/
     --nav-background-color: #FFFFFF;
     --nav-link-color: #1145FF;
     --nav-hover-link-color: #FFFFFF;
