Editing my Page with links and ajusting settings

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,11 +1,17 @@
+*{
+    margin: 3px;
+    padding: 2px;
+    box-sizing: border-box;
+}
+
 nav {
     background-color: steelblue;
-    padding: 10px;
+    padding: 0px;
 }
 nav a {
     color: white;
-    display: block;
-    padding: 20px;
+    display: list-item;
+    padding: 10px;
 }
 h1 {
     color: steelblue;
@@ -18,10 +24,10 @@ img {
     box-shadow: 0 0 30px gray;
 }
 p {
-    padding: 0px;
+    padding: 20px;
 }
 main{
-    max-width: 840px;
+    max-width: 600px;
 }
 aside{
     width: 20rem;
@@ -39,10 +45,23 @@ aside img{
 main img{
     width: 150px;
     height: auto;
+    float: right;
 }
 footer{
     margin-top: 15px;
     border-top: 1px  solid #000;
     text-align: center;
-    
+}
+/*Class Selectors*/
+.box{
+    margin: 1rem;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    padding: 1rem;
+    background-color: #ddd;
+    color: #000;
+}
+
+aside{
+    width: 20rem;
+    text-align: center;
 }
