--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -95,7 +95,8 @@ h1 {
     display: flex;
     position: relative;
     left: 500px;
-    top: 25px;
+    top: 5px;
+    bottom: auto;
     width: 300px;
     height: 200px;
     object-fit: scale-down;
