--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -36,11 +36,9 @@ body{
     padding: 0px;
     text-size-adjust: auto;
     font-size: 1.2rem;
-    margin: 0;
+    margin: 0px;
     width: 100vw;
     height: 100vh;
-
-
 }
 h1, h2, h3, h4, h5, h6{
     font-family: var(--heading-font);
@@ -62,7 +60,8 @@ p{
     padding: 10px;
     margin: 2px 0;
     text-size-adjust: 80%;
-   
+    top:auto;
+    bottom: 0%;
 }
 
 nav{
@@ -86,34 +85,34 @@ nav a:hover{
 
 h1 {
 	text-align: center;
-    position: relative;
-    top: 0px;
-    bottom: 10px;
+    top: 25%;
+    left: 25%;
+    bottom: 0.2rem;
 	font-size: 2rem;
     text-shadow: 3px 3px 5px #777;
     text-shadow: 0 0 15px #333;
 	margin-bottom: 0.3rem;
-
-}
-
-.hero {
-    margin: 25px auto;
-	position: relative; /* If removed, what happens? */
 }
 
 .hero img{
-    display: block;
-    margin: auto;
-    width: 100%;
-    height: auto;
+    margin: 0;
+    padding: 0;
+    width: 1364px;
+    background-size: cover;
+    background-position: center;
+    height: 640px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
+
 /*Image Inside the blue box*/
 .stats img{
     display: block;
     margin: auto;
     position: relative;
-    top: 5px;
-    bottom: auto;
+    top: 10px;
+    bottom: 100px;
     width: 200px;
     height: 150px;
 }
@@ -122,15 +121,19 @@ h1 {
 	position: absolute;
     margin: auto;
     display: block;
-    top: 100px;
+    top: 200px;
     left: 10px;
     right: 10px;
-	bottom: 250px;
+	bottom: 5px;
 	background: radial-gradient(#ffffff, #6c9af7);
 	border: 1px solid #000;
 	padding: 1rem;
 	box-shadow: 0 0 30px #111;
 	opacity: 0.8;
+}
+
+.stats p{
+    margin-top: 50px;
 }
 
 section{
@@ -140,8 +143,14 @@ section{
     text-size-adjust: initial;
 }
 
+
+article p{
+    top: 100px;
+    bottom: 100px;
+}
 img {
     padding: 10px;
+    position: relative;
 }
 div{
     width: 100vw;
