--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -134,6 +134,7 @@ h1 {
 
 .stats p{
     margin-top: 50px;
+    
 }
 
 section{
@@ -156,3 +157,6 @@ div{
     width: 100vw;
     height: 100vh;
 }
+
+
+/*z index: 1; will bring a tittle forth*/
