--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,35 +1,25 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap');
-*{
+
+* {
     margin: 0px;
     padding: 0px;
 }
-.fit{
-    max-width: 100%;
-    max-height: 100%;
-}
 
-.center{
-    display: block;
-    margin: auto;
-}
-
-:root{
+:root {
     --primary-color: #FFFFFF;
     --secondary-color: #1145FF;
-    --accent1-color: #F390A2;
-    --accent2-color: #9CFFF0;
     --accent3-color: #000000;
 
     --heading-font: 'Oswald', serif;
     --paragraph-font: 'Poppins', ;
-/*Navigation Buttons Color*/
+    /*Navigation Buttons Color*/
     --nav-background-color: #6ea8ff;
     --nav-link-color: #ffffff;
     --nav-hover-link-color: #ffffff;
     --nav-hover-background-color: #1145FF;
 }
 
-body{
+body {
     font-family: 'Oswald', sans-serif;
     font-family: 'Poppins', sans-serif var(--paragraph-font);
     max-width: 2000px;
@@ -40,122 +30,263 @@ body{
     width: 100vw;
     height: 100vh;
 }
-h1, h2, h3, h4, h5, h6{
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     font-family: var(--heading-font);
     color: var(--accent3-color)
 }
 
-header{
+header {
+    margin: 1rem auto;
     padding: 0px;
     background-color: var(--nav-background-color);
-    display: flex;
-    height: 120px;
+    display: grid;
+    grid-template-columns: 200px 2fr 2fr;
     align-items: center;
-    justify-content: left;
+    border-bottom: 1px solid #ccc;
+    max-width: auto;
+    height: 120px;
     font:
-      bold calc(1em + 2 * (100vw - 120px) / 100) 'Oswald';
+        bold calc(1em + 2 * (100vw - 120px) / 100) 'Oswald';
     text-shadow: #000 2px 2px 0.2rem;
+    max-width: 100vw;
 }
-p{
+
+.navigation {
+    display: flex;
+    list-style: none;
+}
+
+.navigation li {
+    flex: 1 1 100%;
+}
+
+.navigation a {
+    display: block;
+    color: #FFFFFF;
+    padding: 20px;
+    text-decoration: none;
+}
+
+p {
     padding: 10px;
     margin: 2px 0;
     text-size-adjust: 80%;
-    top:auto;
+    top: auto;
     bottom: 0%;
 }
 
-nav{
+nav {
     background-color: var(--nav-background-color);
     font-size: 1.2rem;
     display: flex;
+    text-align: right;
 }
-nav a{
+
+nav a {
     display: block;
     color: var(--nav-link-color);
     text-decoration: none;
     padding: 3rem;
 }
-nav a:link, nav a:visited{
+
+nav a:link,
+nav a:visited {
     color: var(--nav-link-color);
 }
-nav a:hover{
+
+nav a:hover {
     color: var(--nav-hover-link-color);
     background-color: var(--nav-hover-background-color);
 }
 
-h1 {
-	text-align: center;
-    top: 25%;
-    left: 25%;
-    bottom: 0.2rem;
-	font-size: 2rem;
-    text-shadow: 3px 3px 5px #777;
-    text-shadow: 0 0 15px #333;
-	margin-bottom: 0.3rem;
+.hero{
+    padding: 0px;
+    align-items: baseline;
 }
 
-.hero img{
+/*Background Image*/
+.hero img {
     margin: 0;
     padding: 0;
     width: 1364px;
     background-size: cover;
     background-position: center;
-    height: 640px;
+    height: 500px;
     display: flex;
     align-items: center;
     justify-content: center;
+    max-width: 1000px;
+    margin: 0 auto;
+}
+
+.stats h1 {
+    text-align: center;
+    top: 25%;
+    left: 25%;
+    bottom: 0.2rem;
+    font-size: 2rem;
+    text-shadow: 3px 3px 5px #777;
+    text-shadow: 0 0 15px #333;
+    margin-bottom: 0.3rem;
+    grid-row: 1;
+    grid-column: 1/5;
+    align-items: center;
+}
+
+/*Blue Box*/
+.stats {
+    position: absolute;
+    margin: auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 5px;
+    top: 200px;
+    left: 10px;
+    right: 10px;
+    background: radial-gradient(#ffffff, #6c9af7);
+    border: 1px solid #000;
+    padding: 1rem;
+    box-shadow: 0 0 30px #111;
+    opacity: 0.8;
+    align-items: center;
+    max-width: 900px;
+    
 }
 
 /*Image Inside the blue box*/
-.stats img{
-    display: block;
-    margin: auto;
+.stats img {
+    display: grid;
+    grid-row: 2;
+    grid-column: 4;
     position: relative;
     top: 10px;
     bottom: 100px;
     width: 200px;
     height: 150px;
-}
-/*Blue Box*/
-.stats {
-	position: absolute;
-    margin: auto;
-    display: block;
-    top: 200px;
-    left: 10px;
-    right: 10px;
-	bottom: 5px;
-	background: radial-gradient(#ffffff, #6c9af7);
-	border: 1px solid #000;
-	padding: 1rem;
-	box-shadow: 0 0 30px #111;
-	opacity: 0.8;
+    align-items: center;
+    max-width: 840px;
+    margin: 0 auto;
 }
 
-.stats p{
-    margin-top: 50px;
-    
+.stats p {
+    margin-top: 0%;
+    display: grid;
+    grid-row: 2;
+    grid-column: 1/4;
+    align-items: center;
 }
 
-section{
+section {
     width: 1000px;
     padding: 0px;
     height: auto;
     text-size-adjust: initial;
 }
 
-
-article p{
+article p {
     top: 100px;
-    bottom: 100px;
+    bottom: 1px;
 }
+
 img {
     padding: 10px;
     position: relative;
 }
-div{
+
+div {
     width: 100vw;
     height: 100vh;
+}
+
+.history {
+    position: relative;
+    text-align: center;
+    margin: auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 5px;
+    left: 10px;
+    right: 10px;
+    background: radial-gradient(#ffffff, #6c9af7);
+    border: 1px solid #000;
+    padding: 1rem;
+    box-shadow: 0 0 30px #111;
+    opacity: 0.8;
+    align-items: center;
+    max-width: 900px;
+    margin-top: 0px;
+}
+
+.history h2 {
+    grid-row: 1;
+    grid-column: 2;
+}
+
+.history p {
+    grid-row: 3;
+    grid-column: 1/4;
+}
+
+.history img {
+    left: 20px;
+    grid-row: 2;
+    grid-column: 2;
+    align-items: center;
+}
+
+.adventures {
+    position: relative;
+    margin: auto;
+    text-align: center;
+    position: flex;
+    flex: wrap;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-gap: 6px;
+    background: radial-gradient(#ffffff, #6c9af7);
+    border: 1px solid #000;
+    padding: 1rem;
+    box-shadow: 0 0 30px #111;
+    opacity: 0.8;
+    top: 20px;
+    left: 10px;
+    right: 10px;
+    
+}
+
+.adventures img .alt {
+    position: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    grid-row: 3;
+    grid-column: 1;
+    justify-content: center;
+    justify-items: stretch;
+}
+
+.adventures h3 {
+    grid-row: 1;
+    grid-column: 1/6;
+}
+
+footer {
+    position: relative;
+    top: 20px;
+    text-align: center;
+    max-width: 900px;
+    margin: auto;
+}
+
+footer .sociallinks img, a .instagram{
+    display: grid;
+    align-items: center;
+    align-content: center;
 }
 
 
