--- a/wwr/styles/contact.css
+++ b/wwr/styles/contact.css
@@ -9,7 +9,6 @@
     --primary-color: #FFFFFF;
     --secondary-color: #1145FF;
     --accent3-color: #000000;
-
     --heading-font: 'Oswald', serif;
     --paragraph-font: 'Poppins', ;
     /*Navigation Buttons Color*/
@@ -46,7 +45,6 @@ header {
     grid-template-columns: 200px 2fr 2fr;
     align-items: center;
     border-bottom: 1px solid #ccc;
-    max-width: auto;
     height: 120px;
     font:
         bold calc(1em + 2 * (100vw - 120px) / 100) 'Oswald';
@@ -95,7 +93,7 @@ nav a:hover {
 }
 
 /*Background Image*/
-img [alt="rafting image"]{
+img [alt="rafting image"] {
     margin: 0 auto;
     width: 1100px;
     padding: 0px;
@@ -138,21 +136,18 @@ img [alt="rafting image"]{
 }
 
 .info1 {
-    text-size-adjust: 500px;
     grid-row: 3;
     grid-column: 2/4;
     padding: 1rem;
 }
 
 .info2 {
-    text-size-adjust: 500px;
     grid-row: 4;
     grid-column: 2/4;
     padding: 1rem;
 }
 
 .info3 {
-    text-size-adjust: 500px;
     grid-row: 5;
     grid-column: 2/4;
     padding: 1rem;
@@ -190,10 +185,8 @@ div {
     display: flex;
     margin: 0 auto;
     text-align: center;
-    position: flex;
-    flex: wrap;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 6px;
     background: radial-gradient(#ffffff, #6c9af7);
     border: 1px solid #000;
@@ -207,7 +200,6 @@ div {
 }
 
 .adventures img .alt {
-    position: flex;
     flex-direction: row;
     flex-wrap: wrap;
     grid-row: 3;
@@ -245,7 +237,8 @@ fieldset {
     border-color: rgb(192, 192, 192);
     border-image: initial;
 }
- form{
+
+form {
     width: 350px;
     margin: 0 auto;
     padding: 1rem;
@@ -253,7 +246,7 @@ fieldset {
     border-radius: 1rem;
     background-color: #eee;
     display: inline;
- }
+}
 
 .form-item,
 .form-item1 {
