--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -34,9 +34,7 @@ body {
 h1,
 h2,
 h3,
-h4,
-h5,
-h6 {
+h4 {
     font-family: var(--heading-font);
     color: var(--accent3-color)
 }
@@ -49,12 +47,11 @@ header {
     grid-template-columns: 200px 2fr 2fr;
     align-items: center;
     border-bottom: 1px solid #ccc;
-    max-width: auto;
+    max-width: 1200px;
     height: 120px;
     font:
         bold calc(1em + 2 * (100vw - 120px) / 100) 'Oswald';
     text-shadow: #000 2px 2px 0.2rem;
-    max-width: 100vw;
 }
 
 .navigation {
@@ -112,16 +109,15 @@ nav a:hover {
 
 /*Background Image*/
 .hero img {
-    margin: 0;
-    padding: 0;
+    position: static;
+    bottom: 10px;
     width: 1364px;
     background-size: cover;
     background-position: center;
-    height: 500px;
     display: flex;
     align-items: center;
     justify-content: center;
-    max-width: 1000px;
+    max-width: 1200px;
     margin: 0 auto;
 }
 
@@ -143,22 +139,22 @@ nav a:hover {
 .stats {
     position: absolute;
     margin: auto;
+    margin-top: 100px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 5px;
-    top: 200px;
+    top: 180px;
     left: 10px;
     right: 10px;
     background: radial-gradient(#ffffff, #6c9af7);
     border: 1px solid #000;
     padding: 1rem;
     box-shadow: 0 0 30px #111;
-    opacity: 0.8;
+    opacity: 0.9;
     align-items: center;
     max-width: 900px;
-    
-}
 
+}
 /*Image Inside the blue box*/
 .stats img {
     display: grid;
@@ -183,10 +179,13 @@ nav a:hover {
 }
 
 section {
-    width: 1000px;
+    display: block;
+    width: 1100px;
+    margin: auto;
     padding: 0px;
     height: auto;
     text-size-adjust: initial;
+    align-items: center;
 }
 
 article p {
@@ -205,22 +204,19 @@ div {
 }
 
 .history {
-    position: relative;
     text-align: center;
     margin: auto;
+    margin-left: 64px;
+    margin-top: 250px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 5px;
-    left: 10px;
-    right: 10px;
     background: radial-gradient(#ffffff, #6c9af7);
     border: 1px solid #000;
     padding: 1rem;
     box-shadow: 0 0 30px #111;
     opacity: 0.8;
-    align-items: center;
-    max-width: 900px;
-    margin-top: 0px;
+    max-width: 1100px;
 }
 
 .history h2 {
@@ -276,18 +272,11 @@ div {
 }
 
 footer {
+    display: grid;
     position: relative;
     top: 20px;
     text-align: center;
-    max-width: 900px;
-    margin: auto;
+    max-width: 1200px; 
+    margin: 1rem auto;
+    padding: 0px;   
 }
-
-footer .sociallinks img, a .instagram{
-    display: grid;
-    align-items: center;
-    align-content: center;
-}
-
-
-/*z index: 1; will bring a tittle forth*/
