--- a/wwr/styles/contact.css
+++ b/wwr/styles/contact.css
@@ -45,11 +45,11 @@ header {
     grid-template-columns: 200px 2fr 2fr;
     align-items: center;
     border-bottom: 1px solid #ccc;
+    max-width: 1200px;
     height: 120px;
     font:
         bold calc(1em + 2 * (100vw - 120px) / 100) 'Oswald';
     text-shadow: #000 2px 2px 0.2rem;
-    max-width: 100vw;
 }
 
 .navigation {
