Changes in the Contact us page

--- a/wwr/styles/contact.css
+++ b/wwr/styles/contact.css
@@ -183,7 +183,7 @@ div {
 
 .adventures {
     display: flex;
-    margin: 0 auto;
+    margin-top: 50px;
     text-align: center;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
