--- a/wwr/styles/index.css
+++ b/wwr/styles/index.css
@@ -19,6 +19,10 @@
 }
 
 body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     font-family: 'Oswald', sans-serif;
     font-family: 'Poppins', sans-serif var(--paragraph-font);
     max-width: 2000px;
